# rust-project

./: .cursorrule  docker-compose.yml
auth-service/: .env  Cargo.toml
auth-service/docs/: architecture.md
auth-service/migrations/: 001_create_accounts.sql  20260203120000_init.sql
auth-service/src/: app.rs  main.rs
auth-service/src/application/: error.rs  mod.rs
auth-service/src/application/account/: service.rs
auth-service/src/application/auth/: auth_service.rs  dto.rs  error.rs  mod.rs  service.rs
auth-service/src/application/ports/: auth_events.rs  mod.rs
auth-service/src/config/: config.rs  mod.rs
auth-service/src/domain/account/: entity.rs  repository.rs
auth-service/src/domain/auth/: entity.rs  error.rs  repository.rs
auth-service/src/infrastructure/: mod.rs
auth-service/src/infrastructure/account/: account_model.rs  mod.rs  postgres_repository.rs
auth-service/src/infrastructure/auth/: toasty_repository.rs
auth-service/src/infrastructure/messaging/: kafka_admin.rs  kafka_client.rs  kafka_consumer.rs  kafka_producer.rs  kafka_send.rs  mod.rs
auth-service/src/infrastructure/messaging/inbound/: logging.rs  mod.rs
auth-service/src/infrastructure/messaging/outbound/: kafka_producer.rs  kafka_send.rs  mod.rs  noop_publisher.rs
auth-service/src/presentation/auth/: handlers.rs  routes.rs
auth-service/src/presentation/http/: account_handler.rs  auth_handler.rs  mod.rs
auth-service/src/presentation/middleware/: auth.rs
discord-service/: .dockerignore  Cargo.toml  Dockerfile
discord-service/docs/: architecture.md
discord-service/src/: app.rs  config.rs  main.rs
discord-service/src/application/: error.rs  mod.rs  ports.rs  services.rs
discord-service/src/application/ports/: guild_repository.rs  manga_repository.rs  mod.rs
discord-service/src/application/use_cases/: add_manga.rs  handle_message.rs  mod.rs  register_guild.rs
discord-service/src/domain/: channel_subscription.rs  command.rs  guild.rs  manga.rs  manga_tracking.rs  mod.rs
discord-service/src/infrastructure/: manga_scraper.rs  mod.rs  mongo.rs  repositories.rs
discord-service/src/infrastructure/discord/: bot_client.rs  client.rs  mod.rs  publisher.rs
discord-service/src/infrastructure/memory/: guild_repo.rs  manga_repo.rs  mod.rs
discord-service/src/presentation/discord/: bootstrap.rs  bot.rs  client.rs  commands.rs  handler.rs  handlers.rs  mod.rs  notifier.rs
messages-service/: Cargo.toml
messages-service/migrations/: 20260203120000_init.sql
messages-service/src/: app.rs  main.rs
messages-service/src/application/: error.rs  mod.rs
messages-service/src/application/message/: service.rs
messages-service/src/application/ports/: consumed_auth_events.rs  message_events.rs  messaging_inbound.rs  mod.rs
messages-service/src/config/: config.rs
messages-service/src/domain/message/: entity.rs  repository.rs
messages-service/src/infrastructure/: mod.rs
messages-service/src/infrastructure/message/: message_model.rs  mod.rs  postgres_repository.rs
messages-service/src/infrastructure/messaging/: kafka_admin.rs  kafka_client.rs  kafka_consumer.rs  kafka_producer.rs  kafka_send.rs  mod.rs  noop_publisher.rs
messages-service/src/presentation/http/: message_handler.rs  mod.rs
product-service/: Cargo.toml  README.md
product-service/docs/: architecture.md
product-service/migrations/: 001_create_products.sql
product-service/src/: app.rs  main.rs
product-service/src/application/products/: dto.rs  error.rs  mod.rs  products_service.rs
product-service/src/config/: mod.rs
product-service/src/domain/products/: entity.rs  error.rs  repository.rs
product-service/src/infrastructure/products/: mod.rs  toasty_repository.rs
product-service/src/presentation/: mod.rs
product-service/src/presentation/middleware/: auth.rs
product-service/src/presentation/products/: handlers.rs  routes.rs
users-service/: .env  Cargo.toml  README.md  docker-compose.yml
users-service/docs/: architecture.md
users-service/migrations/: 001_create_users.sql  20260203120000_init.sql
users-service/src/: app.rs  main.rs
users-service/src/application/: mod.rs
users-service/src/application/ports/: mod.rs  user_events.rs
users-service/src/application/user/: service.rs
users-service/src/application/users/: dto.rs  error.rs  mod.rs  users_service.rs
users-service/src/config/: config.rs
users-service/src/domain/user/: entity.rs  repository.rs
users-service/src/domain/users/: entity.rs  error.rs  mod.rs  repository.rs
users-service/src/infrastructure/: mod.rs
users-service/src/infrastructure/messaging/: kafka_admin.rs  kafka_client.rs  kafka_consumer.rs  mod.rs
users-service/src/infrastructure/user/: mod.rs  postgres_repository.rs  user_model.rs
users-service/src/infrastructure/users/: mod.rs  toasty_repository.rs
users-service/src/presentation/http/: mod.rs  user_handler.rs
users-service/src/presentation/middleware/: auth.rs
users-service/src/presentation/users/: handlers.rs  routes.rs
(+55 files in other folders)
