[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
toasty = { version = "0.4.0", features = ["postgresql"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
