[package]
name = "discord-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.197"
futures = "0.3.30"
tokio = {version = "1.36.0", features = ["full"]}
chrono = { version = "0.4.34", features = ["unstable-locales", "serde"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework"] }
reqwest = { version = "0.11.24", features = ["json"] }
scraper = "0.18.1"
async-trait = "0.1.89"
thiserror = "2.0.17"
mongodb = "3.2.3"
