[package]
name = "product-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
toasty = { version = "0.4.0", features = ["postgresql", "jiff"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jiff = "0.2"
dotenvy = "0.15"
jsonwebtoken = "9"
