[package]
name = "users-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
chrono = "0.4"
dotenv = "0.15.0"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
toasty = { version = "0.4.0", features = ["postgresql"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
