[package]
name = "users-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3"
jsonwebtoken = "9"
rdkafka = { version = "0.37", features = ["tokio", "cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
